[package]
name = "Followers_Cli" 
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
dialoguer = "0.9"
pyo3 = { version = "0.22.0", features = ["extension-module"] }
